Add prometheus and grafana in the application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#h2 database
 spring.application.name=transactions
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
@@ -6,3 +7,7 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
+
+# Prometheus and actuator
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
